# us-elections

./: .gitignore  pyproject.toml
data/elections/: elections.py  utils.py
notebooks/: demographics.ipynb  lm_eval_implementation.ipynb  proto.ipynb  state.ipynb
src/: __main__.py  definitions.py  plots.py  process.py
